--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="container">
     <a href="https://drive.google.com/file/d/1BxvSB5L3yOXN9CsKALZw69Eu4ea8WnSi/view?usp=drive_link" target="_blank" download="1.mpg" class="ved" onclick="myFunction()"> video-1</a><hr>
     <a href="https://drive.google.com/file/d/1k7OAy3nIA4xNoLS5tL1VUalxkKw7Gznq/view?usp=sharing" target="_blank" download="1.mpg" class="ved"onclick="myFunction()"> video-2</a><hr>
-    <a href="3.mpg" target="_blank" download="1.mpg" class="ved"onclick="myFunction()"> video-3</a><hr>
-    <a href="4.mpg" target="_blank" download="1.mpg" class="ved"onclick="myFunction()"> video-4</a><hr>
+    <a href="https://drive.google.com/file/d/1C0m2sATQFhdPdrDTJf8RpYpF8ygnypsb/view?usp=sharing" target="_blank" download="1.mpg" class="ved"onclick="myFunction()"> video-3</a><hr>
+    <a href="https://drive.google.com/file/d/1Cvka0dSNavMw33Ht7cgaZkKrPg2jocX0/view?usp=drive_link" target="_blank" download="1.mpg" class="ved"onclick="myFunction()"> video-4</a><hr>
     <a href="5.mpg" target="_blank" download="1.mpg" class="ved"onclick="myFunction()"> video-5</a><hr>
     <a href="6.mpg" target="_blank" download="1.mpg" class="ved"onclick="myFunction()"> video-6</a><hr>
     <a href="7.mpg" target="_blank" download="1.mpg" class="ved"onclick="myFunction()"> video-7</a><hr>
